Fix pointer events not working on Firefox

--- a/animations.css
+++ b/animations.css
@@ -6,6 +6,7 @@
 .slide-out-right {
     -webkit-animation: slide-out-right 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
     animation: slide-out-right 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+    pointer-events: none;
 }
 
 .slide-in-left {
